# ai-orchestrator-client

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ai_orchestrator_client/: __init__.py  _auth.py  _base.py  _errors.py  _validators.py  _ws.py  async_client.py  consumer.py  streaming.py  sync_client.py
ai_orchestrator_client/models/: __init__.py  campaign.py  consumers.py  events.py  orchestrate.py  status.py  verify.py
docs/: quickstart.md
examples/: async_campaign.py  stream_logs.py  sync_run.py
tests/: test_async_client.py  test_campaigns.py  test_consumers.py  test_examples.py  test_models.py  test_openapi_drift.py  test_parity.py  test_smoke.py  test_sync_client.py  test_validators.py  test_ws.py
tests/fixtures/: openapi-v0.1.json
