[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-orchestrator-client"
version = "0.0.0"
description = "Python client for the AI Orchestrator (https://github.com/ernesto01louis/ai-orchestrator)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Louis", email = "louis_ernesto@aol.com" }]
keywords = ["ai-orchestrator", "client", "sdk", "research", "campaigns", "evidence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28,<0.29",
    "pydantic>=2.7",
    "websockets>=13,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5",
    "packaging>=23",
]

[project.urls]
Homepage = "https://github.com/ernesto01louis/ai-orchestrator-client"
Issues = "https://github.com/ernesto01louis/ai-orchestrator-client/issues"
"Server (orchestrator)" = "https://github.com/ernesto01louis/ai-orchestrator"

[tool.hatch.build.targets.wheel]
packages = ["ai_orchestrator_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "live_orchestrator: tests that hit a live orchestrator (opt-in; requires ORCHESTRATOR_URL env)",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["ai_orchestrator_client"]
